# makepub

./: .gitignore  Cargo.toml  README.md
changeover/OPS/: epb.ncx  epb.opf  toc.xhtml
changeover/OPS/content/: 000-cover.xhtml  001-title.xhtml  002-copyright.xhtml  003-other-books.xhtml  004-preamble.xhtml  005a-foreword.xhtml  005b-trigger-warning.xhtml  006-thanks.xhtml  007-quote.xhtml  008-quote-2.xhtml  009-prologue.xhtml  010-chapter-1-perfect-day.xhtml  020-chapter-2-crisis-of-faith.xhtml  030-chapter-3-broken.xhtml  040-chapter-4-friend-of-a-friend.xhtml  050-chapter-5-in-at-the-deep-end.xhtml  060-chapter-6-some-friends-we-had.xhtml  070-chapter-7-home-sweet-home.xhtml  080-chapter-8-pretty-boy.xhtml  090-chapter-9-uncomfortable-truth.xhtml  100-chapter-10-chamber-of-secrets.xhtml  110-chapter-11-longest-flight.xhtml  120-chapter-12-memory-lane.xhtml  130-chapter-13-city-of-angels.xhtml  140-chapter-14-butterfly.xhtml  150-chapter-15-superstar.xhtml  160-chapter-16-where-words-don-t-count.xhtml  170-chapter-17-it-s-who-i-am.xhtml  180-chapter-18-road-trip.xhtml  190-chapter-19-buridan-s-donkey.xhtml  200-chapter-20-life-s-precious-moments.xhtml  210-chapter-21-high-society.xhtml  220-chapter-22-unexpected-traveller.xhtml  230-chapter-23-homecoming.xhtml  240-chapter-24-great-expectations.xhtml  250-chapter-25-shady-dealings.xhtml  260-chapter-26-storm-in-a-teacup.xhtml  260-chapter-26-tempest-in-a-teapot.xhtml  270-chapter-27-smoke-and-mirrors.xhtml  280-chapter-28-primal-urges.xhtml  (+31 more)
src/: compress.rs  epub.rs  main.rs  preprocess.rs  types.rs  util.rs
(+1 files in other folders)
